Issue-47 Correct title style on mobile

--- a/web/themes/custom/lesnik/css/app.css
+++ b/web/themes/custom/lesnik/css/app.css
@@ -32,7 +32,13 @@ a:hover {
   width: 100%;
   text-align: center;
 }
-/* line 30, ../sass/_global.scss */
+@media only screen and (max-width: 680px) {
+  /* line 21, ../sass/_global.scss */
+  .header-wrapper .field--name-field-page-title {
+    font-size: 40px;
+  }
+}
+/* line 33, ../sass/_global.scss */
 .header-wrapper .field--name-field-image {
   position: absolute;
   bottom: 50%;
@@ -40,13 +46,13 @@ a:hover {
   opacity: 0.7;
 }
 @media only screen and (max-width: 680px) {
-  /* line 30, ../sass/_global.scss */
+  /* line 33, ../sass/_global.scss */
   .header-wrapper .field--name-field-image {
     bottom: 0;
   }
 }
 @media only screen and (max-width: 680px) {
-  /* line 38, ../sass/_global.scss */
+  /* line 41, ../sass/_global.scss */
   .header-wrapper .field--name-field-image img {
     width: 100%;
     height: 100%;
@@ -54,42 +60,42 @@ a:hover {
   }
 }
 
-/* line 48, ../sass/_global.scss */
+/* line 51, ../sass/_global.scss */
 article.content {
   margin: auto;
   min-height: 30vh;
 }
-/* line 51, ../sass/_global.scss */
+/* line 54, ../sass/_global.scss */
 article.content .webform-submission-form {
   padding: 30px 40px;
 }
-/* line 54, ../sass/_global.scss */
+/* line 57, ../sass/_global.scss */
 article.content .field--type-text-with-summary {
   padding: 30px 40px;
 }
 
 @media only screen and (max-width: 680px) {
-  /* line 58, ../sass/_global.scss */
+  /* line 61, ../sass/_global.scss */
   .form-text {
     max-width: 70vw;
   }
 }
 
 @media only screen and (max-width: 680px) {
-  /* line 63, ../sass/_global.scss */
+  /* line 66, ../sass/_global.scss */
   .form-email {
     max-width: 70vw;
   }
 }
 
-/* line 71, ../sass/_global.scss */
+/* line 74, ../sass/_global.scss */
 #edit-actions input {
   padding: 5px;
   border: #031C07 solid 2px;
   background: #FFFFFF;
   color: #031C07;
 }
-/* line 76, ../sass/_global.scss */
+/* line 79, ../sass/_global.scss */
 #edit-actions input:hover {
   color: #DD843B;
 }
